feat: add user to CIBA context
AM-5493

(cherry picked from commit 3d696df13f93b503eb18fb79902c488a3e793882)