@@ -96,7 +96,8 @@ public class CibaAuthenticationRequestResolver extends AbstractRequestResolver<C
                         LOGGER.warn("login_hint match multiple users or no one");
                         throw new InvalidRequestException("Invalid hint");
                     }
-                    authRequest.setSubject(users.get(0).getId());
+                    authRequest.setUser(users.getFirst());
+                    authRequest.setSubject(users.getFirst().getId());
                     return authRequest;
                 });
 
@@ -128,6 +129,7 @@ public class CibaAuthenticationRequestResolver extends AbstractRequestResolver<C
                             evaluateExp(expirationTime.toInstant().getEpochSecond(), Instant.now(), 0);
                         }
                         return subjectManager.findUserBySub(new io.gravitee.am.common.jwt.JWT(signedJwt.getJWTClaimsSet().getClaims())).map(user -> {
+                            authRequest.setUser(user);
                             authRequest.setSubject(user.getId());
                             return authRequest;
                         }).toSingle();
@@ -180,7 +182,8 @@ public class CibaAuthenticationRequestResolver extends AbstractRequestResolver<C
                     LOGGER.warn("login_hint_token match multiple users or no one");
                     return Single.error(new InvalidRequestException("Invalid hint"));
                 }
-                authRequest.setSubject(users.get(0).getId());
+                authRequest.setUser(users.getFirst());
+                authRequest.setSubject(users.getFirst().getId());
                 return Single.just(authRequest);
             });
 
